Add html files for E2 and E3

--- a/Excercise3.html
+++ b/Excercise3.html
@@ -14,13 +14,13 @@
 
     <!-- Inline scripts are forbidden in Firefox OS apps (CSP restrictions),
          so we use a script file. -->
-    <script src="Exercise2_Answer.js" defer></script>
+    <script src="Exercise3_Answer.js" defer></script>
 
   </head>
 
   <body>
     <!-- This code is in the public domain. Enjoy! -->
-    <h1>Exercise 2, see console for outputd</h1>
+    <h1>Exercise 3, see console for output</h1>
   </body>
 
 </html>
