--- a/Excercise1.html
+++ b/Excercise1.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- This code is in the public domain. Enjoy! -->
-    <h1>Hello World</h1>
+    <h1>Exercise 2, see console for output</h1>
   </body>
 
 </html>
